Misc: In notes form on realtime map, nolonger 255 max character. Bug Fix: If a note has a long row, wrap the row.

--- a/app/src/app/modules/notes/components/list/list.component.scss
+++ b/app/src/app/modules/notes/components/list/list.component.scss
@@ -42,7 +42,7 @@ notes-list {
         }
 
         .note-text {
-          white-space: pre;
+          white-space: pre-wrap;
         }
       }
 
